updated info and improved website visibility

--- a/index.html
+++ b/index.html
@@ -10,31 +10,33 @@
   <link rel="stylesheet" href="css/bootstrap.min.css" type="text/css" >
 	<link rel="stylesheet" href="css/style.css" type="text/css" >
   <link rel="stylesheet" type="text/css" href="css/font-awesome.min.css">
-	<link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300' rel='stylesheet' type='text/css'>
   </head>
 
 	<body>       
   <div class="bg-content">
     <div class="container">
-      <h1>Jordan Cooper</h1>
-        <div >
-            <img src="img/profile.png" alt="..." class="col-md-2 img-resposive img-rounded">
-            <p >I am an ambitious and hardworking individual who is equipped with a high sense of professional standards and the drive to effect change and achieve success.<br><br>
-          
-          <div class="social-links">
-            Follow me: 
-            <a href="https://twitter.com/superrcoop"><i class="fa fa-twitter"></i></a>
-            <a href="http://instagram.com/superrcoop"><i class="fa fa-instagram"></i></a>
-            <a href="https://github.com/superrcoop"><i class="fa fa-github"></i></a> 
-            <a href="https://www.linkedin.com/in/jordancooper1/"><i class="fa fa-linkedin"></i></a><br>
-            Email me:<a href="mailto:admin@jordancooper.me" target="_top"> admin@jordancooper.me</a>
+      <div class="card" style="width:350px ">
+          <img src="img/profile.png" alt="..." class="card-img-top">
+          <div class="card-body">
+            <h1>JORDAN COOPER</h1>
+            <h2>Developer/Programmer</h2>
+            <p class="card-text">An ambitious and hardworking individual who is equipped with a high sense of professional standards and the drive to effect change and achieve success.<br><br>
+            Follow me:
+            <div class="social-links">
+              <a href="https://www.facebook.com/profile.php?id=100012160081204&ref=bookmarks"><i class="fa fa-facebook-square"></i></a>
+              <a href="https://twitter.com/superrcoop"><i class="fa fa-twitter"></i></a>
+              <a href="http://instagram.com/superrcoop"><i class="fa fa-instagram"></i></a>
+              <a href="https://github.com/superrcoop"><i class="fa fa-github"></i></a> 
+              <a href="https://www.linkedin.com/in/jordancooper1/"><i class="fa fa-linkedin"></i></a><br>
+              </p>
+            </div>
           </div>
-          </p>
         </div>
       </div>
     </div>
   </div>
   <script type="text/javascript" src="js/jquery.min.js"></script>
   <script type="text/javascript" src="js/bootstrap.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.6/umd/popper.min.js"></script>
   </body>
 </html>
