--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
   <meta name="keywords" content="blog,resume,travelling">
   <meta name="author" content="Jordan Cooper">  
   <meta name="viewport" content="width=device-width,initial-scale=1">
-  <link rel="stylesheet" href="css/bootstrap.min.css" type="text/css" >
+  <!-- Latest compiled and minified CSS -->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css">
 	<link rel="stylesheet" href="css/style.css" type="text/css" >
   <link rel="stylesheet" type="text/css" href="css/font-awesome.min.css">
   </head>
@@ -15,7 +16,7 @@
 	<body>       
   <div class="bg-content">
     <div class="container">
-      <div class="card" style="width:350px ">
+      <div class="card bg-light text-dark">
           <img src="img/profile.png" alt="..." class="card-img-top">
           <div class="card-body">
             <h1>JORDAN COOPER</h1>
@@ -35,8 +36,14 @@
       </div>
     </div>
   </div>
-  <script type="text/javascript" src="js/jquery.min.js"></script>
-  <script type="text/javascript" src="js/bootstrap.min.js"></script>
+  
+  <!-- jQuery library -->
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+
+  <!-- Popper JS -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.6/umd/popper.min.js"></script>
+
+  <!-- Latest compiled JavaScript -->
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js"></script>
   </body>
 </html>
