optimized site/imgs

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <h1>JORDAN COOPER</h1>
             <h2>Developer/Programmer</h2>
             <p class="card-text">An ambitious and hardworking individual who is equipped with a high sense of professional standards and the drive to effect change and achieve success.<br><br>
-            Follow me:
+            Follow me anywhere:
             <div class="social-links">
               <a href="https://www.facebook.com/profile.php?id=100012160081204&ref=bookmarks"><i class="fa fa-facebook-square"></i></a>
               <a href="https://twitter.com/superrcoop"><i class="fa fa-twitter"></i></a>
