--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <!-- Latest compiled and minified CSS -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css">
-	<link rel="stylesheet" href="css/style.css" type="text/css" >
-  <link rel="stylesheet" type="text/css" href="css/font-awesome.min.css">
+	<link rel="stylesheet" href="https://www.jordancooper.me/css/style.css"  >
+  <link rel="stylesheet" href="https://www.jordancooper.me/css/font-awesome.min.css">
   </head>
 
 	<body>       
